{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 363,
  "lineage": "380e22c2-f797-54fb-8e64-2729f090238a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "fargate_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:targetgroup/fargate-tg-voucherz-test/718de1f0eb8e5660",
            "arn_suffix": "targetgroup/fargate-tg-voucherz-test/718de1f0eb8e5660",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 40,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:targetgroup/fargate-tg-voucherz-test/718de1f0eb8e5660",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fargate-tg-voucherz-test",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "fargate-tg-voucherz-test"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:route-table/rtb-0c02f5b07505caaec",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-081f6564e3ca36a00",
                "route_table_id": "rtb-0c02f5b07505caaec",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "fargate-voucherz-test-rtb-private-ap-northeast-1a"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0c02f5b07505caaec",
            "owner_id": "715841364530",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c02f5b07505caaec",
            "routes": [],
            "subnet_id": null,
            "tags": {
              "Name": "fargate-voucherz-test-rtb-private-ap-northeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:security-group/sg-0efb6c108188bd7aa",
            "description": "voucherz-test-security-policy",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "alb-sg-voucherz-test"
                ]
              }
            ],
            "id": "sg-0efb6c108188bd7aa",
            "name": "voucherz-test-security-policy",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "alb-sg-voucherz-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:security-group/sg-0c2f02071ac243ffd",
            "description": "Fargate sequrity group",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "fargate-sg-voucherz-test"
                ]
              }
            ],
            "id": "sg-0c2f02071ac243ffd",
            "name": "fargate-sg-voucherz-test",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "fargate-sg-voucherz-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:security-group/sg-01058cd586df62a94",
            "description": "for RDS",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "rds-sg-voucherz-test"
                ]
              }
            ],
            "id": "sg-01058cd586df62a94",
            "name": "voucherz-rds",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "rds-sg-voucherz-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:subnet/subnet-0ce58d5e393ec8270",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 11,
            "cidr_block": "10.0.0.160/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "fargate-voucherz-test-subnet-private2-ap-northeast-1a"
                ]
              }
            ],
            "id": "subnet-0ce58d5e393ec8270",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841364530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "fargate-voucherz-test-subnet-private2-ap-northeast-1a"
            },
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:subnet/subnet-0f62fb333db1b726f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 11,
            "cidr_block": "10.0.0.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "alb-voucherz-test-subnet-public1-ap-northeast-1a"
                ]
              }
            ],
            "id": "subnet-0f62fb333db1b726f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841364530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "alb-voucherz-test-subnet-public1-ap-northeast-1a"
            },
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:subnet/subnet-03e8708ace2d2a4a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 11,
            "cidr_block": "10.0.0.16/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "alb-voucherz-test-subnet-public2-ap-northeast-1c"
                ]
              }
            ],
            "id": "subnet-03e8708ace2d2a4a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841364530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "alb-voucherz-test-subnet-public2-ap-northeast-1c"
            },
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:subnet/subnet-0f62fb333db1b726f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 11,
            "cidr_block": "10.0.0.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "alb-voucherz-test-subnet-public1-ap-northeast-1a"
                ]
              }
            ],
            "id": "subnet-0f62fb333db1b726f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841364530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "alb-voucherz-test-subnet-public1-ap-northeast-1a"
            },
            "vpc_id": "vpc-05ffd3536a22a6d48"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "voucherz_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:vpc/vpc-05ffd3536a22a6d48",
            "cidr_block": "10.0.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0859983e42db04113",
                "cidr_block": "10.0.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0f0c50acda372dcf9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "voucherz-test-vpc"
                ]
              }
            ],
            "id": "vpc-05ffd3536a22a6d48",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c02f5b07505caaec",
            "owner_id": "715841364530",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "voucherz-test-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d09dda8d7804afa",
            "arn": "arn:aws:ec2:ap-northeast-1:715841364530:elastic-ip/eipalloc-04d09dda8d7804afa",
            "domain": "vpc",
            "id": "eipalloc-04d09dda8d7804afa",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-168-250-130.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.168.250.130",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "nat-voucherz-test-eip"
            },
            "tags_all": {
              "Name": "nat-voucherz-test-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_voucherz_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:loadbalancer/app/alb-voucherz-test/8d3a9ba264dd5f2a",
            "arn_suffix": "app/alb-voucherz-test/8d3a9ba264dd5f2a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-voucherz-test-1462737964.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:loadbalancer/app/alb-voucherz-test/8d3a9ba264dd5f2a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-voucherz-test",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0efb6c108188bd7aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e8708ace2d2a4a5"
              },
              {
                "subnet_id": "subnet-0f62fb333db1b726f"
              }
            ],
            "subnets": [
              "subnet-03e8708ace2d2a4a5",
              "subnet-0f62fb333db1b726f"
            ],
            "tags": {
              "Name": "alb-voucherz-test"
            },
            "tags_all": {
              "Name": "alb-voucherz-test"
            },
            "vpc_id": "vpc-05ffd3536a22a6d48",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:loadbalancer/app/alb-voucherz-test/8d3a9ba264dd5f2a"
          },
          "dependencies": [
            "data.aws_security_group.alb_sg",
            "data.aws_subnet.public1",
            "data.aws_subnet.public2",
            "data.aws_vpc.voucherz_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:listener/app/alb-voucherz-test/8d3a9ba264dd5f2a/52e110c87a1d1df8",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:715841364530:certificate/ae26e5d1-6575-4087-a033-d9cda54862bf",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:targetgroup/fargate-tg-voucherz-test/718de1f0eb8e5660",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:listener/app/alb-voucherz-test/8d3a9ba264dd5f2a/52e110c87a1d1df8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:loadbalancer/app/alb-voucherz-test/8d3a9ba264dd5f2a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:715841364530:listener/app/alb-voucherz-test/8d3a9ba264dd5f2a/52e110c87a1d1df8"
          },
          "dependencies": [
            "aws_lb.alb_voucherz_test",
            "data.aws_acm_certificate.voucherz",
            "data.aws_lb_target_group.fargate_tg",
            "data.aws_security_group.alb_sg",
            "data.aws_subnet.public1",
            "data.aws_subnet.public2",
            "data.aws_vpc.voucherz_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d09dda8d7804afa",
            "association_id": "eipassoc-06e0a1695db718c63",
            "connectivity_type": "public",
            "id": "nat-03dd55b0d429c62fa",
            "network_interface_id": "eni-04309eef7523de5ef",
            "private_ip": "10.0.0.8",
            "public_ip": "54.168.250.130",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f62fb333db1b726f",
            "tags": {
              "Name": "nat-voucherz-test"
            },
            "tags_all": {
              "Name": "nat-voucherz-test"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "data.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c02f5b07505caaec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03dd55b0d429c62fa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c02f5b07505caaec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "data.aws_route_table.private_rtb",
            "data.aws_subnet.public_subnet"
          ]
        }
      ]
    }
  ]
}